--- a/src/index.css
+++ b/src/index.css
@@ -15,14 +15,18 @@ html, body {
   animation: blink 1s infinite;
 }
 
-
-
 @keyframes blink {
-  0% { opacity: 1; }
-  50% { opacity: 0; }
-  100% { opacity: 1; }
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
 }
 
+.animate-blink {
+  animation: blink 1s infinite; /* Adjust the duration as needed */
+}
 
 @keyframes marquee {
   0% {
